--- a/packages/react-form/package.json
+++ b/packages/react-form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-form",
-  "version": "0.3.33",
+  "version": "0.3.33-12hr-format-beta.1",
   "license": "MIT",
   "description": "Manage react forms tersely and safely-typed with no magic using React hooks.",
   "main": "dist/src/index.js",
