--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address",
-  "version": "2.7.17",
+  "version": "2.8.0-expand-locale-support-for-shopify-address.1",
   "license": "MIT",
   "description": "Address utilities for formatting addresses.",
   "main": "dist/src/index.js",
@@ -23,12 +23,12 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/address/README.md",
   "devDependencies": {
-    "@shopify/address-mocks": "^1.2.35",
+    "@shopify/address-mocks": "^1.3.0-expand-locale-support-for-shopify-address.1",
     "@shopify/jest-dom-mocks": "^2.8.9"
   },
   "sideEffects": false,
   "dependencies": {
-    "@shopify/address-consts": "^1.0.5",
+    "@shopify/address-consts": "^2.0.0-expand-locale-support-for-shopify-address.1",
     "tslib": "^1.9.3"
   },
   "files": [
