--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@apollo/react-common": "^3.1.3",
+    "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.5.5",
     "@shopify/app-bridge": "^0.7.3",
     "@shopify/tophat": "^0.0.3",
@@ -71,7 +73,6 @@
     "prettier": "~1.17.1",
     "puppeteer": "^1.20.0",
     "react": "16.12.0",
-    "react-apollo": "^3.1.2",
     "react-dom": "16.12.0",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
