--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -30,9 +30,10 @@
   },
   "devDependencies": {
     "apollo-cache-inmemory": "^1.3.6",
+    "@apollo/react-common": "^3.1.3",
+    "@apollo/react-hoc": "^3.1.3",
     "apollo-client": "^2.3.8",
     "react": "^16.8.1",
-    "react-apollo": "^3.1.2",
     "react-dom": "^16.8.1"
   },
   "peerDependencies": {
