--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -24,6 +24,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-graphql/README.md",
   "dependencies": {
+    "@apollo/react-common": ">=3.0.0 <4.0.0",
+    "@apollo/react-components": ">=3.0.0 <4.0.0",
+    "@apollo/react-hooks": ">=3.0.0 <4.0.0",
     "@shopify/async": "^2.1.4",
     "@shopify/react-async": "^3.1.8",
     "@shopify/react-effect": "^3.2.11",
@@ -35,8 +38,7 @@
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
     "apollo-link-http": ">=1.0.0 <2.0.0",
-    "graphql-typed": "^0.4.0",
-    "react-apollo": ">=3.0.0 <4.0.0"
+    "graphql-typed": "^0.4.0"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.0"
