--- a/packages/decorators/tsconfig.json
+++ b/packages/decorators/tsconfig.json
@@ -11,5 +11,5 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{"path": "../address"}, {"path": "../function-enhancers"}]
+  "references": [{"path": "../function-enhancers"}]
 }
