--- a/packages/react-cookie/tsconfig.json
+++ b/packages/react-cookie/tsconfig.json
@@ -12,5 +12,10 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{"path": "../react-network"}]
+  "references": [
+    {"path": "../react-effect"},
+    {"path": "../react-hooks"},
+    {"path": "../react-html"},
+    {"path": "../react-network"}
+  ]
 }
