--- a/packages/react-graphql/tsconfig.json
+++ b/packages/react-graphql/tsconfig.json
@@ -12,10 +12,12 @@
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
   "references": [
+    {"path": "../async"},
     {"path": "../react-async"},
+    {"path": "../react-effect"},
     {"path": "../react-hooks"},
-    {"path": "../react-testing"},
     {"path": "../react-idle"},
+    {"path": "../react-testing"},
     {"path": "../useful-types"}
   ]
 }
