--- a/packages/koa-shopify-graphql-proxy/tsconfig.json
+++ b/packages/koa-shopify-graphql-proxy/tsconfig.json
@@ -10,6 +10,5 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{"path": "../jest-koa-mocks"}]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
 }
