--- a/packages/react-csrf-universal-provider/tsconfig.json
+++ b/packages/react-csrf-universal-provider/tsconfig.json
@@ -12,7 +12,9 @@
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
   "references": [
-    {"path": "../react-universal-provider"},
-    {"path": "../react-csrf"}
+    {"path": "../react-csrf"},
+    {"path": "../react-effect"},
+    {"path": "../react-html"},
+    {"path": "../react-universal-provider"}
   ]
 }
