--- a/packages/react-google-analytics/tsconfig.json
+++ b/packages/react-google-analytics/tsconfig.json
@@ -11,5 +11,8 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{"path": "../react-import-remote"}]
+  "references": [
+    {"path": "../enzyme-utilities"},
+    {"path": "../react-import-remote"}
+  ]
 }
