--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -41,6 +41,7 @@
     "graphql-typed": "^0.4.0"
   },
   "devDependencies": {
+    "@shopify/react-testing": "^2.0.0",
     "@types/graphql": "^14.0.0"
   },
   "files": [
