--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "@shopify/react-testing": "^2.0.0",
     "@shopify/with-env": "^1.1.6"
   },
   "sideEffects": false,
