--- a/packages/react-import-remote/tsconfig.json
+++ b/packages/react-import-remote/tsconfig.json
@@ -11,5 +11,11 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{"path": "../react-html"}]
+  "references": [
+    {"path": "../async"},
+    {"path": "../react-hooks"},
+    {"path": "../react-html"},
+    {"path": "../react-intersection-observer"},
+    {"path": "../useful-types"}
+  ]
 }
