--- a/packages/react-network/tsconfig.json
+++ b/packages/react-network/tsconfig.json
@@ -10,5 +10,10 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "references": [
+    {"path": "../jest-koa-mocks"},
+    {"path": "../network"},
+    {"path": "../react-effect"}
+  ]
 }
