--- a/packages/react-performance/tsconfig.json
+++ b/packages/react-performance/tsconfig.json
@@ -11,5 +11,10 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "references": [
+    {"path": "../network"},
+    {"path": "../performance"},
+    {"path": "../react-hooks"}
+  ]
 }
