--- a/packages/react-universal-provider/tsconfig.json
+++ b/packages/react-universal-provider/tsconfig.json
@@ -11,5 +11,5 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{"path": "../react-html"}]
+  "references": [{"path": "../react-effect"}, {"path": "../react-html"}]
 }
