Remove every unsed dependencies

--- a/packages/react-cookie/tsconfig.json
+++ b/packages/react-cookie/tsconfig.json
@@ -12,10 +12,5 @@
     "./src/**/*.tsx"
   ],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [
-    {"path": "../react-effect"},
-    {"path": "../react-hooks"},
-    {"path": "../react-html"},
-    {"path": "../react-network"}
-  ]
+  "references": [{"path": "../react-hooks"}, {"path": "../react-network"}]
 }
