--- a/packages/react-performance/tsconfig.json
+++ b/packages/react-performance/tsconfig.json
@@ -14,7 +14,6 @@
   "exclude": ["**/*.test.ts", "**/*.test.tsx"],
   "references": [
     {"path": "../network"},
-    {"path": "../performance"},
-    {"path": "../react-hooks"}
+    {"path": "../performance"}
   ]
 }
