--- a/packages/react-effect/tsconfig.json
+++ b/packages/react-effect/tsconfig.json
@@ -10,6 +10,5 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
-  "references": [{"path": "../useful-types"}]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
 }
