--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "publish": "lerna publish",
     "build": "yarn tsc --build packages",
     "lint": "eslint '**/*.{ts,tsx}'",
+    "lint:changelogs": "node scripts/lint-changelogs.js",
     "ci:lint-docs": "yarn generate docs && test -z \"$(git status --porcelain)\" || echo 'The root README has not been updated. Run `yarn generate docs` in the root of your quilt directory and try again.'",
     "_test": "NODE_ICU_DATA=node_modules/full-icu jest",
     "pretest": "yarn build",
     "test": "yarn _test --no-coverage",
     "test:ci": "yarn _test --maxWorkers=3 --coverage",
     "check": "lerna run check",
-    "release": "lerna publish",
+    "release": "yarn lint:changelogs && lerna publish",
     "release-beta": "lerna publish --dist-tag beta",
     "clean": "rimraf './packages/*/dist'",
     "generate": "plop",
@@ -59,8 +60,10 @@
     "eslint": "^6.5.1",
     "eslint-plugin-shopify": "^32.0.0",
     "faker": "^4.1.0",
+    "fs-extra": "^8.1.0",
     "full-icu": "^1.3.0",
     "get-port": "^5.0.0",
+    "glob": "^7.1.6",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.0",
     "intl-pluralrules": "^0.2.1",
