--- a/packages/graphql-fixtures/package.json
+++ b/packages/graphql-fixtures/package.json
@@ -26,9 +26,8 @@
   "dependencies": {
     "@shopify/useful-types": "^1.1.2",
     "@types/faker": "^4.1.2",
-    "@types/graphql": "^14.0.0",
     "faker": "^4.1.0",
-    "graphql": "^14.0.0",
+    "graphql": ">=14.5.0 <15.0.0",
     "graphql-tool-utilities": "^1.1.0"
   },
   "peerDependencies": {
