--- a/packages/graphql-tool-utilities/package.json
+++ b/packages/graphql-tool-utilities/package.json
@@ -28,9 +28,8 @@
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@types/graphql": "^14.0.0",
-    "apollo-codegen-core": "0.35.0",
+    "apollo-codegen-core": "0.36.5",
     "core-js": "^2.0.0",
-    "graphql": "^14.0.0"
+    "graphql": ">=14.5.0 <15.0.0"
   }
 }
