--- a/packages/graphql-typed/package.json
+++ b/packages/graphql-typed/package.json
@@ -22,7 +22,6 @@
     "prepublishOnly": "yarn build"
   },
   "peerDependencies": {
-    "@types/graphql": "^14.0.0",
-    "graphql": "^14.0.0"
+    "graphql": ">=14.5.0 <15.0.0"
   }
 }
