--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -35,14 +35,13 @@
     "@babel/types": "^7.4.0",
     "@types/babel__generator": "^7.0.2",
     "@types/chokidar": "^1.7.0",
-    "@types/graphql": "^14.0.0",
     "@types/yargs": "11.0.0",
     "chalk": "^2.4.1",
     "change-case": "^3.0.1",
     "chokidar": "^2.0.3",
     "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
-    "graphql": "^14.0.0",
+    "graphql": ">=14.5.0 <15.0.0",
     "graphql-config": "^2.2.1",
     "graphql-config-utilities": "^1.0.0",
     "graphql-tool-utilities": "^1.1.0",
