--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -27,11 +27,10 @@
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
-    "@types/graphql": "^14.0.0",
     "chalk": "^2.4.1",
     "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
-    "graphql": "^14.0.0",
+    "graphql": ">=14.5.0 <15.0.0",
     "graphql-config": "^2.2.1",
     "graphql-config-utilities": "^1.0.0",
     "graphql-tool-utilities": "^1.1.0",
