--- a/package.json
+++ b/package.json
@@ -40,19 +40,19 @@
     "release": "lerna publish && git push --follow-tags"
   },
   "devDependencies": {
+    "@shopify/eslint-plugin": "^36.0.2",
     "@types/fs-extra": "^5.0.2",
     "@types/glob": "^5.0.35",
     "@types/jest": "^24.0.11",
     "@types/node": "^10.0.4",
     "@types/yargs": "^11.0.0",
     "eslint": "^6.5.0",
-    "eslint-plugin-shopify": "^32.0.0",
     "graphql": "^14.0.0",
     "in-publish": "^2.0.0",
     "jest": "^24.7.1",
     "jest-extended": "^0.11.1",
     "lerna": "^2.11.0",
-    "prettier": "^1.12.1",
+    "prettier": "^2.0.4",
     "ts-jest": "24.0.1",
     "typescript": "3.4.1"
   },
