--- a/package.json
+++ b/package.json
@@ -43,18 +43,18 @@
     "@shopify/eslint-plugin": "^36.0.2",
     "@types/fs-extra": "^8.1.0",
     "@types/glob": "^7.1.1",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^25.2.1",
     "@types/node": "^10.0.4",
-    "@types/yargs": "^11.0.0",
+    "@types/yargs": "^15.0.4",
     "eslint": "^6.5.0",
     "graphql": "^14.0.0",
     "in-publish": "^2.0.0",
-    "jest": "^24.7.1",
-    "jest-extended": "^0.11.1",
+    "jest": "^25.3.0",
+    "jest-extended": "^0.11.5",
     "lerna": "^2.11.0",
     "prettier": "^2.0.4",
-    "ts-jest": "24.0.1",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "ts-jest": "25.3.1"
   },
   "dependencies": {
     "fs-extra": "^9.0.0"
