--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -34,17 +34,18 @@
     "@babel/generator": "^7.4.0",
     "@babel/types": "^7.4.0",
     "@types/babel__generator": "^7.0.2",
-    "@types/chokidar": "^1.7.0",
+    "@types/chokidar": "^2.1.3",
     "@types/yargs": "11.0.0",
-    "chalk": "^2.4.1",
-    "change-case": "^3.0.1",
-    "chokidar": "^2.0.3",
+    "chalk": "^4.0.0",
+    "change-case": "^4.1.1",
+    "chokidar": "^3.3.1",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.2",
     "graphql": ">=14.5.0 <15.0.0",
     "graphql-config": "^2.2.1",
     "graphql-config-utilities": "^1.0.0",
     "graphql-tool-utilities": "^1.1.0",
+    "upper-case-first": "^2.0.1",
     "yargs": "^14.2.0"
   },
   "peerDependencies": {
