--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ shared:
   node_container: &node_container
     language: node_js
     node_js:
-      - 8.10.0
+      - 10.16.3
     before_install:
       - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.17.3
       - export PATH="$HOME/.yarn/bin:$PATH"
@@ -13,22 +13,22 @@ shared:
 matrix:
   include:
     - <<: *node_container
-      name: "Node - build, type-check, and end-to-end tests"
+      name: 'Node - build, type-check, and end-to-end tests'
       script:
         - yarn build --verbose
         - yarn test:ci --testPathPattern react-server-webpack-plugin address
     - <<: *node_container
-      name: "Node - unit tests"
+      name: 'Node - unit tests'
       script:
         - yarn test:ci --testPathIgnorePatterns react-server-webpack-plugin address
         - yarn codecov
     - <<: *node_container
-      name: "Node - lint"
+      name: 'Node - lint'
       script:
         - yarn lint
         - yarn ci:lint-docs
     - language: ruby
-      name: "Gem - test and lint"
+      name: 'Gem - test and lint'
       before_install:
         - gem install bundler -v 2.0.2
         - cd gems/quilt_rails
