--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.5.5",
     "@shopify/app-bridge": "^0.7.3",
+    "@shopify/eslint-plugin": "^36.0.2",
     "@shopify/tophat": "^0.0.3",
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.3",
@@ -57,8 +58,7 @@
     "element-closest": "^3.0.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.5.1",
-    "eslint-plugin-shopify": "^32.0.0",
+    "eslint": "^6.8.0",
     "faker": "^4.1.0",
     "fs-extra": "^8.1.0",
     "full-icu": "^1.3.0",
@@ -73,7 +73,7 @@
     "jest-transform-graphql": "^2.1.0",
     "lerna": "^2.9.0",
     "plop": "^2.0.0",
-    "prettier": "~1.17.1",
+    "prettier": "~2.0.4",
     "puppeteer": "^1.20.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
