--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -31,14 +31,17 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@types/common-tags": "1.8.0",
-    "common-tags": "1.8.0"
+    "@types/common-tags": "^1.8.0",
+    "@types/loader-utils": "^1.1.3",
+    "common-tags": "^1.8.0"
   },
   "dependencies": {
     "@jest/transform": "^25.3.0",
     "@types/fs-extra": "^8.1.0",
     "@types/webpack": "^4.41.11",
     "fs-extra": "^9.0.0",
-    "graphql": ">=14.5.0 <15.0.0"
+    "graphql": ">=14.5.0 <15.0.0",
+    "graphql-typed": "^0.5.0",
+    "loader-utils": "^2.0.0"
   }
 }
