✨ magic-entries-webpack-plugin (#1412)
* ✨ magic-entries-webpack-plugin

* use the InputFileSystem from webpack

* 💅 move test

* 🧹 cleanup

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -28,6 +28,7 @@
     {"path": "./koa-shopify-graphql-proxy"},
     {"path": "./koa-shopify-webhooks"},
     {"path": "./logger"},
+    {"path": "./magic-entries-webpack-plugin"},
     {"path": "./mime-types"},
     {"path": "./network"},
     {"path": "./performance"},
