--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -8,6 +8,7 @@
     {"path": "./admin-graphql-api-utilities"},
     {"path": "./ast-utilities"},
     {"path": "./async"},
+    {"path": "./browser"},
     {"path": "./csrf-token-fetcher"},
     {"path": "./css-utilities"},
     {"path": "./dates"},
