Update generator and edit readme files
Co-authored-by: Gord P <GoodForOneFare@users.noreply.github.com>

--- a/gems/quilt_rails/lib/generators/quilt/react_setup/templates/tsconfig.json
+++ b/gems/quilt_rails/lib/generators/quilt/react_setup/templates/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@shopify/typescript-configs/application.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "rootDir": "."
+    "rootDir": ".",
+    "paths": {
+      "*": ["app/ui/*"]
+    }
   },
-  "include": ["app/ui"]
+  "include": ["./config/*.ts", "./app/ui/**/*"]
 }
