--- a/packages/magic-entries-webpack-plugin/package.json
+++ b/packages/magic-entries-webpack-plugin/package.json
@@ -25,8 +25,10 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/magic-entries-webpack-plugin/README.md",
   "dependencies": {
     "glob": "^7.1.6",
-    "glob-to-regexp": "^0.4.1",
-    "webpack": "^4.43.0"
+    "glob-to-regexp": "^0.4.1"
+  },
+  "peerDependencies": {
+    "webpack": ">4.25.1, <=4.5.0"
   },
   "files": [
     "dist/*",
