need this for now till sewing-kit can resolve the issue

--- a/gems/quilt_rails/lib/generators/sewing_kit/templates/package.json
+++ b/gems/quilt_rails/lib/generators/sewing_kit/templates/package.json
@@ -24,5 +24,8 @@
     "extends": [
       "@shopify/stylelint-plugin/prettier"
     ]
+  },
+  "resolutions": {
+    "babel-plugin-dynamic-import-node": "2.3.0"
   }
 }
