--- a/packages/magic-entries-webpack-plugin/package.json
+++ b/packages/magic-entries-webpack-plugin/package.json
@@ -33,5 +33,9 @@
   "files": [
     "dist/*",
     "!tsconfig.tsbuildinfo"
-  ]
+  ],
+  "devDependencies": {
+    "@types/webpack-virtual-modules": "^0.1.0",
+    "webpack-virtual-modules": "^0.2.2"
+  }
 }
