--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-shopify": "^20.0.0",
     "codecov": "^3.0.2",
+    "cross-fetch": "^3.0.4",
     "element-closest": "^3.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -67,7 +68,6 @@
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.3",
     "intl-pluralrules": "^0.2.1",
-    "isomorphic-fetch": "^2.2.1",
     "jest": "^25.3.0",
     "jest-enzyme": "^7.1.2",
     "jest-transform-graphql": "^2.1.0",
