--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@shopify/network": "^1.4.7",
     "@shopify/react-effect": "^3.2.12",
+    "@shopify/react-hooks": "^1.10.0",
+    "@shopify/react-universal-provider": "^1.1.16",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
