cautionary tale. do not ever merge without CI passing...

--- a/gems/quilt_rails/lib/generators/quilt/rails_setup/templates/Procfile
+++ b/gems/quilt_rails/lib/generators/quilt/rails_setup/templates/Procfile
@@ -1,2 +1,2 @@
-node: bin/rails sewing_kit:server:start
-web: bin/rails server -p $PORT -e $RAILS_ENV
+node: node build/server/main.js
+web: bundle exec rails server -p $PORT -e $RAILS_ENV
