--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -43,12 +43,11 @@
     "@shopify/react-testing": "^2.1.3",
     "@shopify/with-env": "^1.1.9",
     "@types/koa": "^2.0.0",
-    "@types/supertest": "^2.0.8",
     "@types/webpack-virtual-modules": "^0.1.0",
     "get-port": "^5.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "supertest": "^4.0.2",
+    "saddle-up": "^0.5.1",
     "webpack": ">4.25.1, <=4.5.0"
   },
   "peerDependencies": {
