--- a/package.json
+++ b/package.json
@@ -1,57 +1,68 @@
 {
   "name": "quilt",
   "version": "1.0.0",
+  "private": true,
   "description": "A loosely related set of packages for JavaScript/TypeScript projects at Shopify",
-  "scripts": {
-    "publish": "lerna publish",
-    "build": "yarn tsc --build packages",
-    "lint": "eslint '**/*.{ts,tsx}'",
-    "lint:changelogs": "node scripts/lint-changelogs.js",
-    "ci:lint-docs": "yarn generate docs && test -z \"$(git status --porcelain)\" || echo 'The root README has not been updated. Run `yarn generate docs` in the root of your quilt directory and try again.'",
-    "_test": "NODE_ICU_DATA=node_modules/full-icu jest",
-    "pretest": "yarn build",
-    "test": "yarn _test --no-coverage",
-    "test:ci": "yarn _test --maxWorkers=3 --coverage",
-    "check": "lerna run check",
-    "release": "yarn lint:changelogs && lerna publish",
-    "release-beta": "lerna publish --dist-tag beta",
-    "clean": "rimraf './packages/*/dist'",
-    "generate": "plop",
-    "generate:package": "plop package && yarn plop docs && prettier --write \"./packages/tsconfig.json\"",
-    "tophat": "tophat"
+  "homepage": "https://github.com/shopify/quilt#readme",
+  "bugs": {
+    "url": "https://github.com/shopify/quilt/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Shopify/quilt.git"
   },
-  "author": "Shopify Inc.",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shopify/quilt/issues"
-  },
-  "homepage": "https://github.com/shopify/quilt#readme",
-  "private": true,
+  "author": "Shopify Inc.",
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "build": "sk build",
+    "check": "lerna run check",
+    "ci:lint-docs": "yarn generate docs && test -z \"$(git status --porcelain)\" || echo 'The root README has not been updated. Run `yarn generate docs` in the root of your quilt directory and try again.'",
+    "clean": "rimraf './packages/*/build' './packages/*/*.d.ts' './packages/*/*.js' './packages/*/*.esnext' './packages/*/*.mjs' '.sewing-kit'",
+    "generate": "plop",
+    "generate:package": "plop package && yarn plop docs && prettier --write \"tsconfig.json\"",
+    "lint": "sk lint",
+    "lint:changelogs": "node scripts/lint-changelogs.js",
+    "publish": "lerna publish",
+    "release": "yarn lint:changelogs && lerna publish",
+    "release-beta": "lerna publish --dist-tag beta",
+    "test": "NODE_ICU_DATA=node_modules/full-icu yarn sk test",
+    "test:ci": "yarn test --coverage",
+    "tophat": "tophat"
+  },
+  "resolutions": {
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "dot-prop": "5.1.1"
+  },
+  "dependencies": {},
   "devDependencies": {
     "@apollo/react-common": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.5.5",
+    "@sewing-kit/cli": "^0.1.6",
+    "@sewing-kit/config": "^0.1.5",
+    "@sewing-kit/plugin-eslint": "^0.1.4",
+    "@sewing-kit/plugin-javascript": "^0.1.16",
+    "@sewing-kit/plugin-jest": "^0.1.17",
+    "@sewing-kit/plugin-package-flexible-outputs": "^0.1.17",
+    "@sewing-kit/plugin-react": "^0.1.17",
+    "@sewing-kit/plugin-typescript": "^0.1.17",
+    "@sewing-kit/plugins": "^0.1.4",
     "@shopify/app-bridge": "^0.7.3",
     "@shopify/eslint-plugin": "^36.0.2",
     "@shopify/tophat": "^0.0.3",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/faker": "^4.1.5",
-    "@types/jest": "^25.2.1",
     "@types/puppeteer": "^1.20.0",
     "@types/react": "16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.6",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
-    "babel-jest": "^25.3.0",
     "babel-loader": "^8.0.6",
     "babel-preset-shopify": "^20.0.0",
     "codecov": "^3.0.2",
@@ -59,7 +70,6 @@
     "element-closest": "^3.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^6.8.0",
     "faker": "^4.1.0",
     "fs-extra": "^8.1.0",
     "full-icu": "^1.3.0",
@@ -68,7 +78,6 @@
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.3",
     "intl-pluralrules": "^0.2.1",
-    "jest": "^25.3.0",
     "jest-enzyme": "^7.1.2",
     "jest-transform-graphql": "^2.1.0",
     "lerna": "^2.9.0",
@@ -79,14 +88,7 @@
     "react-dom": "16.12.0",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "^25.3.1",
     "tslib": "^1.9.3",
     "typescript": "^3.7.5"
-  },
-  "dependencies": {},
-  "resolutions": {
-    "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5",
-    "dot-prop": "5.1.1"
   }
 }
