--- a/templates/tsconfig.hbs.json
+++ b/templates/tsconfig.hbs.json
@@ -1,12 +1,12 @@
 {
-  "extends": "../tsconfig_base.json",
+  "extends": "../../config/typescript/tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "baseUrl": ".",
-    "rootDir": "."
+    "outDir": "./build/ts",
+    "rootDir": "src",
+    "baseUrl": "src"
   },
   "include": [
-    "../../config/typescript/**/*",
+    "../../config/typescript/*.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
