--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "resolutions": {
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
-    "dot-prop": "5.1.1"
+    "dot-prop": "5.1.1",
+    "@babel/plugin-proposal-decorators": "7.10.5"
   },
   "dependencies": {},
   "devDependencies": {
@@ -52,6 +53,7 @@
     "@sewing-kit/plugin-typescript": "^0.1.17",
     "@sewing-kit/plugins": "^0.1.4",
     "@shopify/app-bridge": "^0.7.3",
+    "@shopify/babel-preset": "^23.1.0",
     "@shopify/eslint-plugin": "^36.0.2",
     "@shopify/tophat": "^0.0.3",
     "@types/enzyme": "^3.10.5",
@@ -64,7 +66,6 @@
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
     "babel-loader": "^8.0.6",
-    "babel-preset-shopify": "^20.0.0",
     "codecov": "^3.0.2",
     "cross-fetch": "^3.0.4",
     "element-closest": "^3.0.1",
