--- a/config/typescript/tsconfig.base.json
+++ b/config/typescript/tsconfig.base.json
@@ -9,6 +9,7 @@
     "target": "es5",
     "downlevelIteration": true,
     "esModuleInterop": true,
+    "isolatedModules": true,
     "jsx": "react",
     "strictNullChecks": true,
     "noImplicitAny": false,
