lock dot-prop to 5.1.1

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   "dependencies": {},
   "resolutions": {
     "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5"
+    "@types/react-dom": "16.9.5",
+    "dot-prop": "5.1.1"
   }
 }
