Exclude non-suite test files

--- a/packages/koa-performance/tsconfig.json
+++ b/packages/koa-performance/tsconfig.json
@@ -11,7 +11,7 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["**/test/**/*", "**/tests/**/*"],
   "references": [
     {"path": "../network"},
     {"path": "../performance"},
