--- a/packages/react-performance/tsconfig.json
+++ b/packages/react-performance/tsconfig.json
@@ -11,6 +11,6 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["**/test/**/*", "**/tests/**/*"],
   "references": [{"path": "../network"}, {"path": "../performance"}]
 }
