--- a/packages/admin-graphql-api-utilities/tsconfig.json
+++ b/packages/admin-graphql-api-utilities/tsconfig.json
@@ -10,5 +10,5 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
+  "exclude": ["**/test/**/*", "**/tests/**/*"]
 }
