--- a/packages/graphql-persisted/tsconfig.json
+++ b/packages/graphql-persisted/tsconfig.json
@@ -13,6 +13,6 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["**/test/**/*", "**/tests/**/*"],
   "references": [{"path": "../sewing-kit-koa"}]
 }
