--- a/packages/react-cookie/tsconfig.json
+++ b/packages/react-cookie/tsconfig.json
@@ -11,6 +11,6 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["**/test/**/*", "**/tests/**/*"],
   "references": [{"path": "../react-hooks"}, {"path": "../react-network"}]
 }
