--- a/packages/react-i18n-universal-provider/tsconfig.json
+++ b/packages/react-i18n-universal-provider/tsconfig.json
@@ -10,7 +10,7 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["**/test/**/*", "**/tests/**/*"],
   "references": [
     {"path": "../react-effect"},
     {"path": "../react-hooks"},
