--- a/packages/sewing-kit-koa/package.json
+++ b/packages/sewing-kit-koa/package.json
@@ -34,8 +34,7 @@
     "koa-compose": ">=3.0.0 <4.0.0",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
-    "node-gzip": "^1.1.2",
-    "tslib": "^1.9.3"
+    "node-gzip": "^1.1.2"
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "1.0.0-sknext-beta.1",
