--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "puppeteer": "^1.20.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "rimraf": "^2.6.2",
-    "tslib": "^1.9.3"
+    "rimraf": "^2.6.2"
   }
 }
