--- a/packages/enzyme-utilities/package.json
+++ b/packages/enzyme-utilities/package.json
@@ -23,8 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/enzyme-utilities/README.md",
   "dependencies": {
-    "lodash": "^4.17.5",
-    "tslib": "^1.9.3"
+    "lodash": "^4.17.5"
   },
   "sideEffects": false,
   "peerDependencies": {
