--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -25,8 +25,7 @@
   "dependencies": {
     "apollo-link": "^1.2.3",
     "graphql": "^14.0.0",
-    "graphql-tool-utilities": "^1.0.0",
-    "tslib": "^1.9.3"
+    "graphql-tool-utilities": "^1.0.0"
   },
   "devDependencies": {
     "@apollo/react-common": "^3.1.3",
