--- a/packages/koa-shopify-graphql-proxy/package.json
+++ b/packages/koa-shopify-graphql-proxy/package.json
@@ -24,8 +24,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-shopify-graphql-proxy/README.md",
   "dependencies": {
     "@types/koa": "^2.0.0",
-    "koa-better-http-proxy": "^0.2.4",
-    "tslib": "^1.9.3"
+    "koa-better-http-proxy": "^0.2.4"
   },
   "peerDependencies": {
     "koa": ">=2.0.0"
