--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -25,8 +25,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "log-symbols": "^2.2.0",
-    "pretty-ms": "^3.2.0",
-    "tslib": "^1.9.3"
+    "pretty-ms": "^3.2.0"
   },
   "sideEffects": false,
   "files": [
