--- a/packages/react-cookie/package.json
+++ b/packages/react-cookie/package.json
@@ -26,8 +26,7 @@
   "dependencies": {
     "@shopify/react-hooks": "1.0.0-sknext-beta.1",
     "@shopify/react-network": "1.0.0-sknext-beta.1",
-    "cookie": "^0.4.0",
-    "tslib": "^1.9.3"
+    "cookie": "^0.4.0"
   },
   "peerDependencies": {
     "react": "^16.3.2",
