--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -28,8 +28,7 @@
     "@shopify/useful-types": "1.0.0-sknext-beta.1",
     "@types/multistream": "^2.1.1",
     "multistream": "^2.1.1",
-    "serialize-javascript": "^3.0.0",
-    "tslib": "^1.9.3"
+    "serialize-javascript": "^3.0.0"
   },
   "peerDependencies": {
     "react": "^16.3.2",
