--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -46,8 +46,7 @@
     "hoist-non-react-statics": "^3.0.1",
     "lodash.clonedeep": "^4.0.0",
     "lodash.merge": "^4.0.0",
-    "string-hash": "^1.1.3",
-    "tslib": "^1.9.3"
+    "string-hash": "^1.1.3"
   },
   "sideEffects": false,
   "peerDependencies": {
