--- a/packages/react-tracking-pixel/package.json
+++ b/packages/react-tracking-pixel/package.json
@@ -23,8 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-tracking-pixel/README.md",
   "dependencies": {
-    "@shopify/react-html": "1.0.0-sknext-beta.1",
-    "tslib": "^1.9.3"
+    "@shopify/react-html": "1.0.0-sknext-beta.1"
   },
   "peerDependencies": {
     "react": "^16.4.1"
