Fix an issue with shipit checks and Github Actions

--- a/shipit.yml
+++ b/shipit.yml
@@ -1,6 +1,8 @@
 ci:
   require:
-    - tests
+    - tests (10.x)
+    - tests (12.x)
+    - tests (14.x)
 dependencies:
   post:
     - yarn run build
