--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "sk lint",
     "lint:changelogs": "node scripts/lint-changelogs.js",
     "ci:lint-docs": "yarn generate docs && ./scripts/check-docs.sh",
-    "_test": "NODE_ICU_DATA=node_modules/full-icu jest",
+    "_test": "NODE_ICU_DATA=node_modules/full-icu sk test",
     "pretest": "yarn build",
-    "test": "yarn _test --no-coverage",
+    "test": "yarn _test",
     "test:ci": "yarn test --coverage",
     "check": "lerna run check",
     "release": "yarn lint:changelogs && lerna publish",
