Modify files to fit quilt format
Add changlog for all 7 packages

update README

update root level files

add tsconfig to all 7 packages

add sewing-kit.config

update all the package.json files

Fix typo

add project references

move graphql-typed into src folder

fix type export

export the 3 entry points to grpahql-mini-transforms

add bin definition to two packages

remove entry point file, and get it generated instead

move graphql-mini-transforms into src folder

--- a/packages/graphql-mini-transforms/tsconfig.json
+++ b/packages/graphql-mini-transforms/tsconfig.json
@@ -1,11 +1,15 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../config/typescript/tsconfig.base.json",
   "compilerOptions": {
+    "outDir": "./build/ts",
     "rootDir": "src",
-    "baseUrl": "src",
-    "declaration": true,
-    "outDir": "lib"
+    "baseUrl": "src"
   },
-  "include": ["./**/*.ts"],
-  "exclude": ["./tests/**", "./lib/**", "node_modules/**"]
+  "include": [
+    "../../config/typescript/*.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "references": [{"path": "../graphql-typed"}]
 }
