--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,15 @@
     {"path": "./packages/decorators"},
     {"path": "./packages/enzyme-utilities"},
     {"path": "./packages/function-enhancers"},
+    {"path": "./packages/graphql-config-utilities"},
+    {"path": "./packages/graphql-fixtures"},
+    {"path": "./packages/graphql-mini-transforms"},
     {"path": "./packages/graphql-persisted"},
     {"path": "./packages/graphql-testing"},
+    {"path": "./packages/graphql-tool-utilities"},
+    {"path": "./packages/graphql-typed"},
+    {"path": "./packages/graphql-typescript-definitions"},
+    {"path": "./packages/graphql-validate-fixtures"},
     {"path": "./packages/i18n"},
     {"path": "./packages/jest-dom-mocks"},
     {"path": "./packages/jest-koa-mocks"},
