--- a/packages/graphql-fixtures/package.json
+++ b/packages/graphql-fixtures/package.json
@@ -1,36 +1,55 @@
 {
   "name": "graphql-fixtures",
   "version": "0.10.0",
-  "types": "lib",
-  "main": "lib/index.js",
   "license": "MIT",
-  "author": "Shopify Inc.",
   "description": "Utilities for generating fixture objects from GraphQL documents.",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "scripts": {
+    "build": "tsc --p tsconfig.json"
+  },
+  "sideEffects": false,
   "publishConfig": {
     "access": "public",
     "@shopify:registry": "https://registry.npmjs.org"
   },
+  "author": "Shopify Inc.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Shopify/graphql-tools-web.git"
+    "url": "git+https://github.com/Shopify/quilt.git",
+    "directory": "packages/graphql-fixtures"
   },
   "bugs": {
-    "url": "https://github.com/shopify/graphql-tools-web/issues"
+    "url": "https://github.com/Shopify/quilt/issues"
   },
-  "homepage": "https://github.com/shopify/graphql-tools-web/blob/main/packages/graphql-fixtures",
-  "scripts": {
-    "build": "tsc",
-    "pretest": "yarn build",
-    "prepublishOnly": "yarn build"
-  },
+  "homepage": "https://github.com/Shopify/quilt/blob/main/packages/graphql-fixtures/README.md",
   "dependencies": {
     "@shopify/useful-types": "^2.1.4",
     "@types/faker": "^4.1.2",
     "faker": "^4.1.0",
     "graphql": ">=14.5.0 <15.0.0",
-    "graphql-tool-utilities": "^1.3.0"
+    "graphql-tool-utilities": "^1.3.0",
+    "tslib": "^1.14.1"
   },
   "peerDependencies": {
-    "graphql-typed": "^0.4.0"
+    "graphql-typed": "^0.6.1"
+  },
+  "files": [
+    "build/*",
+    "index.js",
+    "index.d.ts",
+    "index.esnext",
+    "index.mjs",
+    "!tsconfig.tsbuildinfo"
+  ],
+  "module": "index.mjs",
+  "esnext": "index.esnext",
+  "exports": {
+    "./": "./",
+    ".": {
+      "import": "./index.mjs",
+      "require": "./index.js",
+      "esnext": "./index.esnext"
+    }
   }
 }
