--- a/packages/graphql-tool-utilities/package.json
+++ b/packages/graphql-tool-utilities/package.json
@@ -1,10 +1,14 @@
 {
   "name": "graphql-tool-utilities",
-  "description": "Common utilities for GraphQL developer tools",
   "version": "1.3.0",
-  "types": "lib",
-  "main": "lib/index.js",
   "license": "MIT",
+  "description": "Common utilities for GraphQL developer tools",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "scripts": {
+    "build": "tsc --p tsconfig.json"
+  },
+  "sideEffects": false,
   "publishConfig": {
     "access": "public",
     "@shopify:registry": "https://registry.npmjs.org"
@@ -12,24 +16,39 @@
   "author": "Shopify Inc.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Shopify/graphql-tools-web.git"
+    "url": "git+https://github.com/Shopify/quilt.git",
+    "directory": "packages/graphql-tool-utilities"
   },
   "bugs": {
-    "url": "https://github.com/shopify/graphql-tools-web/issues"
+    "url": "https://github.com/Shopify/quilt/issues"
   },
-  "homepage": "https://github.com/shopify/graphql-tools-web/blob/main/packages/graphql-tool-utilities",
-  "tags": [
-    "graphql",
-    "apollo"
-  ],
-  "scripts": {
-    "build": "tsc",
-    "pretest": "yarn build",
-    "prepublishOnly": "yarn build"
-  },
+  "homepage": "https://github.com/Shopify/quilt/blob/main/packages/graphql-tool-utilities/README.md",
   "dependencies": {
     "apollo-codegen-core": "0.36.5",
     "core-js": "^3.0.0",
-    "graphql": ">=14.5.0 <15.0.0"
-  }
+    "graphql": ">=14.5.0 <15.0.0",
+    "tslib": "^1.14.1"
+  },
+  "files": [
+    "build/*",
+    "index.js",
+    "index.d.ts",
+    "index.esnext",
+    "index.mjs",
+    "!tsconfig.tsbuildinfo"
+  ],
+  "module": "index.mjs",
+  "esnext": "index.esnext",
+  "exports": {
+    "./": "./",
+    ".": {
+      "import": "./index.mjs",
+      "require": "./index.js",
+      "esnext": "./index.esnext"
+    }
+  },
+  "tags": [
+    "graphql",
+    "apollo"
+  ]
 }
