--- a/packages/graphql-tool-utilities/tsconfig.json
+++ b/packages/graphql-tool-utilities/tsconfig.json
@@ -1,11 +1,14 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../config/typescript/tsconfig.base.json",
   "compilerOptions": {
+    "outDir": "./build/ts",
     "rootDir": "src",
-    "baseUrl": "src",
-    "declaration": true,
-    "outDir": "lib"
+    "baseUrl": "src"
   },
-  "include": ["./**/*.ts"],
-  "exclude": ["./lib/**", "node_modules/**"]
+  "include": [
+    "../../config/typescript/*.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
 }
