--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -186,9 +186,9 @@ jobs:
           path: |
             .sewing-kit/
             ./packages/*/build/
-          key: ${{ runner.os }}-build-${{ github.sha }}
+          key: ${{ runner.os }}-build-${{ secrets.CACHE_VERSION }}-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-build-
+            ${{ runner.os }}-build-${{ secrets.CACHE_VERSION }}-
 
       - name: 📦 Install dependencies
         run: yarn --production=false --frozen-lockfile
