--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "graphql-tag": "^2.10.3",
     "intl-pluralrules": "^0.2.1",
     "jest-enzyme": "^7.1.2",
+    "jest-extended": "^0.11.5",
     "jest-transform-graphql": "^2.1.0",
     "lerna": "^2.9.0",
     "plop": "^2.6.0",
