--- a/packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/.graphqlconfig
+++ b/packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/.graphqlconfig
@@ -1,14 +1,14 @@
 {
   "projects": {
     "test1": {
-      "schemaPath": "schema1/schema.json",
+      "schemaPath": "schema1/schema.graphql",
       "includes": ["schema1/documents/**/*.graphql"],
       "extensions": {
         "schemaTypesPath": "schema1/types"
       }
     },
     "test2": {
-      "schemaPath": "schema2/schema.json",
+      "schemaPath": "schema2/schema.graphql",
       "includes": ["schema2/documents/**/*.graphql"],
       "extensions": {
         "schemaTypesPath": "schema2/types"
