--- a/packages/jest-mock-apollo/tsconfig.json
+++ b/packages/jest-mock-apollo/tsconfig.json
@@ -10,5 +10,6 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["**/test/**/*", "**/tests/**/*"]
+  "exclude": ["**/test/**/*", "**/tests/**/*"],
+  "references": [{"path": "../graphql-tool-utilities"}]
 }
