--- a/packages/graphql-config-utilities/package.json
+++ b/packages/graphql-config-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-config-utilities",
-  "version": "1.2.0",
+  "version": "1.2.0-beta-2",
   "license": "MIT",
   "description": "Common utilities for graphql-config",
   "main": "index.js",
