Stricter package.json rules (#1790)
Insist that the first items in the files array are `build/*`,
`!*.tsbuildinfo` then the imports for the index entrypoint.

This removes some straggler mentions of "dist" folders and ensures that
tsbuildinfo files are ignored by making sure their ignore line goes
after the include of build/*

--- a/packages/address-consts/package.json
+++ b/packages/address-consts/package.json
@@ -24,9 +24,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/address-consts/README.md",
   "files": [
-    "dist/*",
-    "!tsconfig.tsbuildinfo",
     "build/*",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
