--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -42,7 +42,11 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
+    "index.js",
+    "index.mjs",
+    "index.esnext",
+    "index.d.ts",
     "base.js",
     "base.mjs",
     "base.esnext",
@@ -83,10 +87,6 @@
     "idle-callback.node.mjs",
     "idle-callback.node.esnext",
     "idle-callback.node.d.ts",
-    "index.js",
-    "index.mjs",
-    "index.esnext",
-    "index.d.ts",
     "intersection-observer.browser.js",
     "intersection-observer.browser.mjs",
     "intersection-observer.browser.esnext",
