--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -31,7 +31,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
