--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -42,7 +42,7 @@
   "sideEffects": false,
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
