--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -63,7 +63,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
