--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -41,15 +41,15 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
-    "babel.js",
-    "babel.mjs",
-    "babel.esnext",
-    "babel.d.ts",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
     "index.d.ts",
+    "babel.js",
+    "babel.mjs",
+    "babel.esnext",
+    "babel.d.ts",
     "webpack.js",
     "webpack.mjs",
     "webpack.esnext",
