--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -35,7 +35,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "apollo.js",
     "apollo.mjs",
     "apollo.esnext",
