--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -35,7 +35,7 @@
   "sideEffects": false,
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
