--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -42,7 +42,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
