--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -38,7 +38,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
