--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -33,7 +33,7 @@
   "sideEffects": false,
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
