--- a/packages/react-csrf/package.json
+++ b/packages/react-csrf/package.json
@@ -27,9 +27,8 @@
     "react": ">=16.8.0 <17.0.0"
   },
   "files": [
-    "dist/*",
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
