--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -38,7 +38,7 @@
   "sideEffects": false,
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
