--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -43,7 +43,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
