--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -33,7 +33,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
