--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -36,7 +36,7 @@
   "sideEffects": false,
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
