--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -44,7 +44,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
