--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -35,7 +35,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
