--- a/packages/react-shortcuts/package.json
+++ b/packages/react-shortcuts/package.json
@@ -31,7 +31,7 @@
   "sideEffects": false,
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
