--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -36,7 +36,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
