--- a/packages/statsd/package.json
+++ b/packages/statsd/package.json
@@ -30,7 +30,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
