--- a/packages/useful-types/package.json
+++ b/packages/useful-types/package.json
@@ -28,7 +28,7 @@
   },
   "files": [
     "build/*",
-    "!tsconfig.tsbuildinfo",
+    "!*.tsbuildinfo",
     "index.js",
     "index.mjs",
     "index.esnext",
